# literature-review-agent

./: .dockerignore  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml  test_config.py
docker/: Dockerfile  docker-compose.yml
src/agents/: embedder_agent.py  parser_agent.py  retriever_agent.py  scraper_agent.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/models/: paper.py
src/services/llm/: prompts.py  providers.py
src/services/rag/: chunker.py  embedder.py  vector_store.py
src/services/scraping/: arxiv_scraper.py
src/utils/: monitoring.py  pdf_parser.py  text_processor.py
tests/: conftest.py
tests/unit/test_agents/: test_parser_agent.py  test_retriever_agent.py  test_scraper_agent.py
tests/unit/test_services/: test_arxiv_scraper.py
