[project]
name = "literature-review-agent"
version = "0.1.0" 
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]              
packages = [
  { include = "agents",    from = "src" },
  { include = "api",       from = "src" },
  { include = "core",      from = "src" },
  { include = "models",    from = "src" },
  { include = "services",  from = "src" },
  { include = "workflows", from = "src" },
  { include = "utils",     from = "src" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
